objects/hed__Program_Enrollment__c.object
<CustomObject>
    <description>Contains details about the relationship a student Contact has with a Department or School (the degree-granting Account type for the educational institution).</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>35</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Honors__c</fullName>
        <label>Honors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program the student is enrolled in.</description>
        <inlineHelpText>The program the student is enrolled in.</inlineHelpText>
        <label>Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Admission_Date__c</fullName>
        <label>Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Affiliation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Contact-Account relationship this academic information is related to.</description>
        <inlineHelpText>The Contact-Account relationship this academic information is related to.</inlineHelpText>
        <label>Affiliation</label>
        <referenceTo>hed__Affiliation__c</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Application_Submitted_Date__c</fullName>
        <label>Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Class_Standing__c</fullName>
        <label>Class Standing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freshman</fullName>
                </value>
                <value>
                    <fullName>Sophomore</fullName>
                </value>
                <value>
                    <fullName>Junior</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Contact.</description>
        <inlineHelpText>The parent Contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Credits_Attempted__c</fullName>
        <label>Credits Attempted</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Credits_Earned__c</fullName>
        <label>Credits Earned</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Eligible_to_Enroll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible to Enroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Enrollment_Status__c</fullName>
        <label>Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full-time</fullName>
                </value>
                <value>
                    <fullName>Half-time</fullName>
                </value>
                <value>
                    <fullName>Less than half-time</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Graduated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__GPA__c</fullName>
        <label>GPA</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Graduation_Year__c</fullName>
        <description>The expected graduation year from the program.</description>
        <label>Class Year</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Program_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Program Plan encompassing all Program Requirements that a student should follow for this Program Enrollment.</description>
        <inlineHelpText>Click to select a Program Plan that a student should follow for this Program Enrollment.</inlineHelpText>
        <label>Program Plan</label>
        <referenceTo>hed__Program_Plan__c</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Program Enrollment</label>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Program Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>